public interface Turboable {

    void turboOn();
    void turboOff();

}
