public interface loadable {

    public void loader();

    public void unloader();

    public void loadables();

    public void storage();


}
